@@ -6,14 +6,7 @@ ip = IPython.ipapi.get()
 def call_pydb(self, args):
     argl = arg_split(args)
     # print argl # dbg
-    if ip.IP.has_readline:
-        ip.IP.savehist()
-    try:
-        pydb.runl(*argl)
-    finally:
-    
-        if ip.IP.has_readline:
-            ip.IP.readline.read_history_file(self.shell.histfile)
+    ip.IP.history_saving_wrapper( lambda : pydb.runl(*argl) )()
     
 ip.expose_magic("pydb",call_pydb)    
 
