@@ -8,6 +8,10 @@
 	
 	* UserConfig/ipy_user_conf.py: install stock completers as default	
 	
+	* iplib.py (history_saving_wrapper), debugger(), ipy_pydb.py:
+	simplified readline history save / restore through a wrapper 
+	function
+	
 	
 2006-10-31  Ville Vainio  <vivainio@gmail.com>
 
